add variables and typography

--- a/src/scss/01-abstracts/_variables.scss
+++ b/src/scss/01-abstracts/_variables.scss
@@ -4,3 +4,10 @@ $md: 640px;
 $md-lg: 960px;
 $lg: 1024px;
 $x-lg: 1440px;
+
+// Colors
+$red: #ea5454;
+$teal: #44d3d2;
+$yellow: #fcae4a;
+$blue: #549ef2;
+$black: #4d4f62;
