--- a/src/scss/02-base/_typography.scss
+++ b/src/scss/02-base/_typography.scss
@@ -1,1 +1,9 @@
 @use "./../01-abstracts/" as *;
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: rem(15px);
+}
