--- a/src/scss/02-base/_typography.scss
+++ b/src/scss/02-base/_typography.scss
@@ -6,4 +6,6 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: rem(15px);
+  line-height: rem(25px);
+  color: $black;
 }
