--- a/src/scss/05-components/_card.scss
+++ b/src/scss/05-components/_card.scss
@@ -1,1 +1,47 @@
 @use "./../01-abstracts/" as *;
+
+.card {
+  background-color: white;
+  background: #ffffff;
+  box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
+  border-radius: 8px;
+  padding: 27px 28px 28px;
+  border-top: solid 3.55px;
+  max-width: 350px;
+  margin: auto;
+
+  &__title {
+    font-weight: 600;
+    font-size: rem(20px);
+    line-height: rem(30px);
+    margin-bottom: 1px;
+  }
+
+  &__text {
+    font-size: rem(13px);
+    line-height: rem(23px);
+    opacity: 0.5;
+    margin-bottom: 33px;
+  }
+
+  &__icon {
+    max-width: 57px;
+    margin-left: auto;
+  }
+
+  &--blue {
+    border-top-color: $blue;
+  }
+
+  &--red {
+    border-top-color: $red;
+  }
+
+  &--teal {
+    border-top-color: $teal;
+  }
+
+  &--yellow {
+    border-top-color: $yellow;
+  }
+}
