--- a/src/scss/05-components/_card.scss
+++ b/src/scss/05-components/_card.scss
@@ -5,16 +5,23 @@
   background: #ffffff;
   box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
   border-radius: 8px;
-  padding: 27px 28px 28px;
+  padding: calc(27px - 3.55px) 28px 28px;
   border-top: solid 3.55px;
   max-width: 350px;
   margin: auto;
+  @include breakpoint($lg) {
+    padding: calc(32px - 4px) 32px 32px;
+    border-top-width: 4px;
+  }
 
   &__title {
     font-weight: 600;
     font-size: rem(20px);
     line-height: rem(30px);
     margin-bottom: 1px;
+    @include breakpoint($lg) {
+      margin-bottom: 6px;
+    }
   }
 
   &__text {
@@ -22,11 +29,18 @@
     line-height: rem(23px);
     opacity: 0.5;
     margin-bottom: 33px;
+    letter-spacing: rem(0.0902778px);
+    @include breakpoint($lg) {
+      margin-bottom: 40px;
+    }
   }
 
   &__icon {
     max-width: 57px;
     margin-left: auto;
+    @include breakpoint($lg) {
+      max-width: 64px;
+    }
   }
 
   &--blue {
